add endpoint register & add exception handle
