# public/docs/openapi.yaml
@@ -5,7 +5,7 @@ info:
   version: 1.0.0
 servers:
   -
-    url: 'http://Laravel-Starter-Project.test'
+    url: 'http://192.168.219.178:3000'
 paths:
   /api/auth/login:
     post:
@@ -81,7 +81,7 @@ paths:
                     type: string
                     example: 'some thing wrong!'
       tags:
-        - Endpoints
+        - Auth
       requestBody:
         required: true
         content:
@@ -92,11 +92,11 @@ paths:
                 username:
                   type: string
                   description: 'The username of the user.'
-                  example: quidem
+                  example: vel
                 password:
                   type: string
                   description: 'The password of the user.'
-                  example: culpa
+                  example: accusamus
               required:
                 - username
                 - password
@@ -158,7 +158,7 @@ paths:
                     example: 4011
                     description: 'The subcode of the response HTTP response code.'
       tags:
-        - Endpoints
+        - Auth
       requestBody:
         required: true
         content:
@@ -169,7 +169,7 @@ paths:
                 refresh_token:
                   type: string
                   description: 'The `refresh_token` from login API.'
-                  example: et
+                  example: omnis
               required:
                 - refresh_token
       security: []
@@ -232,7 +232,7 @@ paths:
                     example: 4011
                     description: 'The subcode of the response HTTP response code.'
       tags:
-        - Endpoints
+        - Auth
   /api/auth/check:
     get:
       summary: 'Check logged in user'
@@ -299,8 +299,62 @@ paths:
                     example: 4011
                     description: 'The subcode of the response HTTP response code.'
       tags:
-        - Endpoints
+        - Auth
+  /api/register:
+    post:
+      summary: 'Register user'
+      description: 'API for register a user.'
+      parameters:
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses: {  }
+      tags:
+        - Registration
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  description: 'Name of the user.'
+                  example: quia
+                username:
+                  type: string
+                  description: 'Username of the user, used to login.'
+                  example: autem
+                email:
+                  type: string
+                  description: 'Email of the user. Must be a valid email address.'
+                  example: margie.price@example.org
+                password:
+                  type: string
+                  description: 'Password of the user. Must be at least 8 characters.'
+                  example: ''
+              required:
+                - name
+                - username
+                - email
+                - password
+      security: []
 tags:
   -
-    name: Endpoints
+    name: Auth
+    description: "\nAPIs for auth users"
+  -
+    name: Registration
     description: ''
